# analytics

./: .funcignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.yaml  flake.nix  host.json  result
.claude/: launch.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4kz3jpwj87cqygrfzqafmzsjkl5gvrms-source  i1i2a7b32wf0x57679gfp52bymhm0ykk-source  j9cmxpvmpjp9ckixx9i9g30yl1vy4kgz-source  ndliyv9wgywibbj3wyqiwwx4i7snzyxb-source  qldncbkcisicy20n06dsmd5hjhk27p2r-source
.github/: dependabot.yml
.github/workflows/: changelog.yml  nix.yml  rust.yml
agent/: Cargo.toml  build.rs
agent/src/: config.rs  demo.rs  errors.rs  main.rs  ratelimit.rs  state.rs
agent/src/analytics/: filter.rs  mod.rs
agent/src/ingest/: compactor.rs  enrich.rs  exception.rs  geo.rs  language.rs  mod.rs  normalize.rs  pipeline.rs  referrer.rs  regroup.rs  ua.rs
agent/src/store/: entities.rs  error.rs  event.rs  events.rs  json.rs  mod.rs  parquet.rs  regroup.rs  schema.rs  tables.rs  triage.rs
agent/src/telemetry/: actix_web_tracing.rs  mod.rs
agent/src/web/: extract.rs  mod.rs  ui.rs
agent/src/web/api/: auth.rs  events.rs  exceptions.rs  instance.rs  me.rs  mod.rs  overview.rs  pixels.rs  projects.rs  query.rs  sources.rs  stats.rs  traces.rs
agent/src/web/helpers/: oidc.rs
agent/src/web/track/: exception.rs  gif.rs  hit.rs  mod.rs  ping.rs  robots.rs  tracker.js  tracker.rs
api/: Cargo.toml
api/src/: auth.rs  event.rs  exception.rs  health.rs  instance.rs  lib.rs  pixel.rs  project.rs  source.rs  stats.rs  trace.rs  track.rs
src/: main.rs
src/api/: error.rs  macros.rs  mod.rs  test.rs
src/api/embed/: get_embedding.rs  mod.rs
src/api/health/: get_health.rs
src/api/likes/: add_like.rs  mod.rs
src/api/pages/: get_page.rs  get_pages.rs  mod.rs
src/api/views/: add_view.rs  mod.rs
src/models/: health.rs  mod.rs  page.rs
src/store/: memory.rs  migrations.rs  mod.rs  sqlite.rs  table_storage.rs
src/telemetry/: actix_message.rs  actix_web_tracing.rs  mod.rs
src/utils/: mod.rs
tracker/: README.md  build.mjs  package-lock.json  package.json  vitest.config.js
tracker/src/: exceptions.js  main.js  privacy.js  tracker.js  transport.js
tracker/test/: exceptions.test.js  privacy.test.js  tracker.test.js  transport.test.js
ui/: Cargo.toml  Trunk.toml  index.html  styles.scss
ui/src/: api.rs  app.rs  auth.rs  filters.rs  format.rs  main.rs  search.rs
ui/src/components/: _alert.scss  _app_bar.scss  _auth.scss  _breakdown.scss  _charts.scss  _controls.scss  _dashboard.scss  _drawer.scss  _dropdown.scss  _exceptions.scss  _filter_bar.scss  _page_header.scss  _settings.scss  _sidebar.scss  _stats.scss  _tables.scss  _traces.scss  alert.rs  app_bar.rs  breakdown.rs  charts.rs  distribution.rs  drawer.rs  dropdown.rs  error.rs  filter_bar.rs  icons.rs  layout.rs  metadata.rs  metric_cards.rs  mod.rs  page_header.rs  project_drawer.rs  range_picker.rs  shell.rs  sidebar.rs  status.rs  trace_list.rs  widgets.rs
ui/src/pages/: dashboard.rs  event_detail.rs  exception_detail.rs  exceptions.rs  misc.rs  mod.rs  overview.rs  pixels.rs  project.rs  settings.rs  sources.rs  trace.rs
ui/src/styles/: _base.scss  _layout.scss  _variables.scss
zoneinfo/: Cargo.toml  build.rs
zoneinfo/src/: lib.rs
