[package]
name = "analytics"
version = "0.1.0"
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
edition = "2021"

[features]
default = []
pure_tests = []

[dependencies]
actix = "0.13"
actix-cors = "0.7.1"
actix-http = "3.11"
actix-rt = "2.11"
actix-service = "2.0.3"
actix-web = "4.11"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
http = "0.2"
log = "0.4"
reqwest = { version = "0.12.24", default-features = false, features = [
  "brotli",
  "charset",
  "http2",
  "json",
  "rustls-tls-webpki-roots",
  "native-tls-vendored",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.37.0"
tokio = { version = "1.48", features = ["full"] }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git" }
