[workspace]
resolver = "3"
members = ["api", "agent"]
exclude = ["ui"]

[workspace.package]
version = "0.1.0"
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/SierraSoftworks/analytics"

[workspace.dependencies]
analytics-api = { path = "api" }

# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Server (agent)
actix-web = "4"
actix-cors = "0.7"
actix-service = "2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde_yaml = "0.9"
humantime-serde = "1"
include_dir = "0.7"
dotenvy = "0.15"
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git" }

# Errors & filtering (SierraSoftworks)
human-errors = "0.2.3"
filt-rs = { git = "https://github.com/SierraSoftworks/filters", features = [
  "serde",
  "chrono",
  "regex",
  "visitor",
] }

# Ingest / enrichment
woothee = "0.13"
httpdate = "1"
url = "2"

# Auth (OIDC)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Pure-Rust crypto backend so JWT verification doesn't depend on the ambient
# rustls CryptoProvider (which reqwest also configures).
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
base64 = "0.22"
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }

# Storage / OLAP
redb = "4.1"
ulid = "1"
polars = { version = "0.54", default-features = false, features = [
  "lazy",
  "parquet",
  "streaming",
  "is_in",
  "strings",
  "regex",
  "diagonal_concat",
  "temporal",
  "dtype-datetime",
  "dtype-date",
  "fmt",
  "round_series",
  "cum_agg",
] }
