# Standalone workspace: this crate is excluded from the repo root's workspace,
# and without this cargo walks past it to whatever manifest sits above the
# checkout (e.g. when building from a nested git worktree).
[workspace]

[package]
name = "analytics-ui"
description = "Client-side-rendered Yew dashboard for the analytics service."
version = "0.1.0"
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/SierraSoftworks/analytics"
publish = false

[[bin]]
name = "analytics-ui"
path = "src/main.rs"

[dependencies]
analytics-api = { path = "../api" }
filt-rs = { version = "1.1.1", features = [
    "visitor",
    "regex",
] }

yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20"

gloo-net = "0.5"
gloo-utils = "0.2"

# Shared futures so concurrent 401-driven session refreshes coalesce onto a
# single renewal (see `auth::refresh_session`).
futures = "0.3"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Navigator",
    "Clipboard",
    "Event",
    "EventTarget",
    "InputEvent",
    "MouseEvent",
    "Element",
    "DomRect",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "ResizeObserver",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
